Accessibility improvements, SEO enhancements, and dynamic sitemap
- Fixed alt text (logo, images)
- Added skip navigation link for keyboard users
- Added focus indicators for keyboard navigation
- Fixed social media links with proper URLs and aria-labels
- Added video accessibility labels (aria-label)
- Improved semantic HTML (footer role, nav aria-label, main id)
- Added CSS variable for focus outline styling
- Created dynamic sitemap with 40+ pages
- Added location-specific schemas for city pages
- Added service callout sections with responsive cards
- Added FAQ and Glossary pages with structured content
- Created accessibility audit documentation

This is the stable baseline for testing Bootstrap vs Tailwind migrations.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,120 @@
 {
+  "SiteSettings": {
+    "BaseUrl": "https://simplecybertech.com",
+    "Name": "Simple Cyber Technology",
+    "Tagline": "Enterprise-grade cybersecurity made simple",
+    "Description": "Simple Cyber Technology is a leading provider of cybersecurity services, dedicated to protecting businesses from cyber threats with innovative solutions and expert support.",
+    "Language": "en-US",
+    "CopyrightYear": "2026"
+  },
+  "BusinessInfo": {
+    "LegalName": "Simple Cyber Technology",
+    "BusinessTypes": [ "LocalBusiness", "ProfessionalService" ],
+    "Telephone": "+1-949-520-6805",
+    "TelephoneDisplay": "(949) 520-6805",
+    "Email": "info@simplecybertech.com",
+    "Address": {
+      "StreetAddress": "949 South Coast Drive, Suite 280",
+      "AddressLocality": "Costa Mesa",
+      "AddressRegion": "CA",
+      "PostalCode": "92626",
+      "AddressCountry": "US"
+    },
+    "OpeningHours": [
+      {
+        "DaysOfWeek": [ "Monday", "Tuesday", "Wednesday", "Thursday", "Friday" ],
+        "Opens": "08:00",
+        "Closes": "18:00"
+      }
+    ],
+    "AreasServed": [
+      { "Type": "City", "Name": "Aliso Viejo" },
+      { "Type": "City", "Name": "Anaheim" },
+      { "Type": "City", "Name": "Brea" },
+      { "Type": "City", "Name": "Buena Park" },
+      { "Type": "City", "Name": "Corona" },
+      { "Type": "City", "Name": "Costa Mesa" },
+      { "Type": "City", "Name": "Cypress" },
+      { "Type": "City", "Name": "Dana Point" },
+      { "Type": "City", "Name": "Fountain Valley" },
+      { "Type": "City", "Name": "Fullerton" },
+      { "Type": "City", "Name": "Garden Grove" },
+      { "Type": "City", "Name": "Huntington Beach" },
+      { "Type": "City", "Name": "Irvine" },
+      { "Type": "City", "Name": "La Habra" },
+      { "Type": "City", "Name": "La Palma" },
+      { "Type": "City", "Name": "Laguna Beach" },
+      { "Type": "City", "Name": "Laguna Hills" },
+      { "Type": "City", "Name": "Laguna Niguel" },
+      { "Type": "City", "Name": "Lake Forest" },
+      { "Type": "City", "Name": "Long Beach" },
+      { "Type": "City", "Name": "Los Alamitos" },
+      { "Type": "City", "Name": "Mission Viejo" },
+      { "Type": "City", "Name": "Newport Beach" },
+      { "Type": "City", "Name": "Orange" },
+      { "Type": "City", "Name": "Placentia" },
+      { "Type": "City", "Name": "Rancho Santa Margarita" },
+      { "Type": "City", "Name": "San Clemente" },
+      { "Type": "City", "Name": "San Juan Capistrano" },
+      { "Type": "City", "Name": "Santa Ana" },
+      { "Type": "City", "Name": "Seal Beach" },
+      { "Type": "City", "Name": "Stanton" },
+      { "Type": "City", "Name": "Tustin" },
+      { "Type": "City", "Name": "Westminster" },
+      { "Type": "City", "Name": "Yorba Linda" },
+      { "Type": "Region", "Name": "Orange County" },
+      { "Type": "Region", "Name": "Los Angeles County" },
+      { "Type": "Region", "Name": "San Diego County" },
+      { "Type": "Region", "Name": "Riverside County" },
+      { "Type": "Region", "Name": "San Bernardino County" },
+      { "Type": "Region", "Name": "Southern California" }
+    ],
+    "KnowsAbout": [
+      "Cybersecurity",
+      "Network Security",
+      "Data Protection",
+      "Penetration Testing",
+      "Help Desk Support",
+      "IT Services",
+      "Compliance",
+      "Cyber Threats",
+      "Risk Assessment"
+    ]
+  },
+  "Navigation": {
+    "HomePage": "/",
+    "AboutPage": "/about-us",
+    "ServicesPage": "/services-overview",
+    "ContactPage": "/contact-us",
+    "SchedulePage": "/contact-us",
+    "PrivacyPolicyPage": "/privacy-policy",
+    "TermsOfServicePage": "/terms-of-service"
+  },
+  "Services": [
+    {
+      "Name": "Help Desk Support",
+      "Description": "Friendly, fast support when you need it. Real people, real solutions.",
+      "Url": "/services-overview#HelpDeskSupport",
+      "Category": "Technical Support"
+    },
+    {
+      "Name": "Cybersecurity Services",
+      "Description": "Enterprise-grade cybersecurity protection tailored for small and medium-sized businesses.",
+      "Url": "/services-overview#CybersecurityServices",
+      "Category": "Security Services"
+    },
+    {
+      "Name": "Penetration Testing",
+      "Description": "Ethical hacking to find security gaps before attackers do.",
+      "Url": "/services-overview#PenetrationTesting",
+      "Category": "Security Assessment"
+    }
+  ],
+  "SocialMedia": {
+    "LinkedIn": "https://linkedin.com/company/simple-cyber-technology",
+    "Twitter": "https://twitter.com/simplecybertech",
+    "Facebook": "https://facebook.com/simplecybertech"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
